2017-01-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driverio.h (sched_t): remove nb_flush
	* server-src/driver.c (read_flush): Add a different sched_t for each
	  storage
	* installcheck/success-dumper-chunker+2taper-flush.pl: fix

2017-01-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse 'active-storage' setting
	* common-src/conffile.h: Add CNF_ACTIVE_STORAGE
	* server-src/driver.c: Use active-storage
	* man/xml-source/amanda.conf.5.xml: Document active-storage
	* installcheck/Installcheck/Run.pm (is_sort_array): new function
	* installcheck/Makefile.am: Add success-dumper-chunker+2taper-flush
	* installcheck/success-dumper-chunker+2taper-flush.pl: New file

2017-01-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amsamba.pl: Set LC_CTYPE to en_US.UTF-8 before
	  executing smbclient

2017-01-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	By Jose M Calhariz and Jon LaBadie
	* man/xml-source/amanda-auth.7.xml
	* man/xml-source/amanda-changers.7.xml
	* file man/xml-source/amanda-devices.7.xml: Documentation fix

2017-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c (start_index): Remove unused ptr and
	  bytes_written variables

2017-01-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda.conf.5.xml: Add a &nbsp; to force a space

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* config/amanda/defaults.m4: Install amanda-security.conf in
	  $sysconfdir

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Paths.pm.in: export SECURITY_FILE and AMANDATES_FILE
	* common-src/amgetconf.pl: Add build.amdatadir, build.security_file
	  and build.amandates_file
	* installcheck/amgetconf.pl: Test them

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-encrypt-end.pl,
	  installcheck/failure-server-encrypt-no-exec.pl.